升级到 Minecraft 26.2 并重构共享层
- 依赖与映射升级到 Minecraft 26.2 / NeoForm 26.2-2 / NeoForge 26.2.0.76
- 移除 Lua 脚本系统与 Addon 框架，相关文档同步下线
- 新增账号系统（Microsoft / TheAltening / Cracked / Session）与账户管理界面
- Manager 统一扁平化，新增 Asset / Executor / Extrapolation / Skin / Video 等管理器
- HUD 新增 Island、VictoryBanner、PlayerInfo、Hotkey 等元素与通知样式
- 修正 AttackSlowdownEvent 在 Git 索引中的文件名大小写，避免 Linux 大小写敏感环境下编译失败