@@ -1,9 +1,11 @@
 package com.github.epsilon.gui.screen;
 
-import com.github.epsilon.holders.ConfigHolder;
+import com.github.epsilon.assets.i18n.EpsilonLanguage;
+import com.github.epsilon.managers.ConfigManager;
 import com.github.epsilon.modules.impl.ClientSetting;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
 import net.minecraft.client.gui.components.Button;
+import net.minecraft.client.gui.components.CycleButton;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.gui.screens.TitleScreen;
 import net.minecraft.network.chat.Component;
@@ -11,16 +13,26 @@ import net.minecraft.util.Mth;
 import net.minecraft.util.Util;
 
 import java.awt.*;
-import java.nio.charset.StandardCharsets;
-import java.util.Base64;
+import java.net.URI;
 import java.util.List;
 
 public class WelcomeScreen extends Screen {
 
-    private static final String TITLE_B64 = "5qyi6L+O5L2/55SoIEVwc2lsb24gLyBXZWxjb21lIHRvIEVwc2lsb24=";
-    private static final String NOTICE_B64 = "5pys5a6i5oi356uv5bey5LuO5byA5rqQ6L2s5Li65LuY6LS554mI5pys77yM6I635Y+W5YaF6YOo54mI5pys6K+36IGU57O7IFFR77yaMzM3MzUwMjE2M+OAgiAvIFRoaXMgY2xpZW50IGhhcyB0cmFuc2l0aW9uZWQgZnJvbSBvcGVuIHNvdXJjZSB0byBhIHBhaWQgdmVyc2lvbi4gQ29udGFjdCBRUSAzMzczNTAyMTYzIHRvIG9idGFpbiB0aGUgaW50ZXJuYWwgdmVyc2lvbi4=";
-    private static final String CONTINUE_B64 = "57un57utIC8gQ29udGludWU=";
-    private static final String DONT_SHOW_AGAIN_B64 = "5LiL5qyh5LiN5YaN5pi+56S6ICjkvaDngrnkuobkuZ/msqHnlKgp";
+    private static final String TITLE = "欢迎使用 Epsilon / Welcome to Epsilon";
+    private static final String NOTICE = "本客户端为免费项目，别买！/ This client is FURRY, don't buy.";
+    private static final String WEBSITE_PREFIX_ZH = "官网: ";
+    private static final String WEBSITE_PREFIX_EN = "Official website: ";
+    private static final String WEBSITE_LABEL = "https://sofurry.me/";
+    private static final String WEBSITE_URL = "https://sofurry.me/";
+    private static final String CONTINUE = "继续 / Continue";
+    private static final String DONT_SHOW_AGAIN = "下次不再显示 / Do not show again";
+    private static final String OPEN_WEBSITE = "打开官网 / Open Website";
+    private static final String LANGUAGE = "语言 / Language";
+
+    private static final Component WEBSITE_LINK = Component.literal(WEBSITE_LABEL).withStyle(style -> style
+            .withColor(0x6FA8FF)
+            .withUnderlined(true)
+    );
 
     public static final WelcomeScreen INSTANCE = new WelcomeScreen();
 
@@ -32,15 +44,17 @@ public class WelcomeScreen extends Screen {
     private static final int BODY_BLOCK_GAP = 4;
     private static final int BUTTON_HEIGHT = 20;
     private static final int BUTTON_GAP = 6;
-    private static final int BUTTON_BLOCK_HEIGHT = BUTTON_HEIGHT * 2 + BUTTON_GAP;
+    private static final int BUTTON_BLOCK_HEIGHT = BUTTON_HEIGHT * 4 + BUTTON_GAP * 3;
     private static final int BUTTON_BOTTOM_PADDING = 12;
 
     private final List<Component> bodyLines = List.of(
-            Component.literal(decode(NOTICE_B64))
+            Component.literal(NOTICE),
+            websiteLine(WEBSITE_PREFIX_ZH),
+            websiteLine(WEBSITE_PREFIX_EN)
     );
 
     private WelcomeScreen() {
-        super(Component.literal(decode(TITLE_B64)));
+        super(Component.literal(TITLE));
     }
 
     private long openedAtMs;
@@ -50,16 +64,28 @@ public class WelcomeScreen extends Screen {
         super.init();
         openedAtMs = Util.getMillis();
 
-        int buttonWidth = Math.min(200, Math.max(160, this.width - 40));
+        int buttonWidth = Math.clamp(this.width - 40, 160, 200);
         int buttonX = (this.width - buttonWidth) / 2;
         int cardHeight = getCardHeight();
         int buttonY = getCardY(cardHeight) + cardHeight - BUTTON_BOTTOM_PADDING - BUTTON_BLOCK_HEIGHT;
 
-        this.addRenderableWidget(Button.builder(Component.literal(decode(DONT_SHOW_AGAIN_B64)), button -> confirmDoNotShowAgain())
-                .bounds(buttonX, buttonY, buttonWidth, BUTTON_HEIGHT)
-                .build());
-        this.addRenderableWidget(Button.builder(Component.literal(decode(CONTINUE_B64)), button -> continueToNextScreen())
+        this.addRenderableWidget(CycleButton.<EpsilonLanguage>builder(
+                        language -> Component.literal(language.toString()),
+                        ClientSetting.INSTANCE.language::getValue
+                )
+                .withValues(EpsilonLanguage.values())
+                .create(buttonX, buttonY, buttonWidth, BUTTON_HEIGHT, Component.literal(LANGUAGE), (button, language) -> {
+                    ClientSetting.INSTANCE.language.setValue(language);
+                    ConfigManager.INSTANCE.saveNow();
+                }));
+        this.addRenderableWidget(Button.builder(Component.literal(DONT_SHOW_AGAIN), button -> confirmDoNotShowAgain())
                 .bounds(buttonX, buttonY + BUTTON_HEIGHT + BUTTON_GAP, buttonWidth, BUTTON_HEIGHT)
+                .build());
+        this.addRenderableWidget(Button.builder(Component.literal(CONTINUE), button -> continueToNextScreen())
+                .bounds(buttonX, buttonY + (BUTTON_HEIGHT + BUTTON_GAP) * 2, buttonWidth, BUTTON_HEIGHT)
+                .build());
+        this.addRenderableWidget(Button.builder(Component.literal(OPEN_WEBSITE), button -> Util.getPlatform().openUri(URI.create(WEBSITE_URL)))
+                .bounds(buttonX, buttonY + (BUTTON_HEIGHT + BUTTON_GAP) * 3, buttonWidth, BUTTON_HEIGHT)
                 .build());
     }
 
@@ -117,17 +143,21 @@ public class WelcomeScreen extends Screen {
     }
 
     private void confirmDoNotShowAgain() {
-//        ClientSetting.INSTANCE.showWelcomeScreen.setValue(false);
-        ConfigHolder.INSTANCE.saveNow();
+        ClientSetting.INSTANCE.showWelcomeScreen.setValue(false);
+        ConfigManager.INSTANCE.saveNow();
         continueToNextScreen();
     }
 
     private void continueToNextScreen() {
         if (ClientSetting.INSTANCE.useMainMenu.getValue()) {
-            minecraft.setScreen(MainMenuScreen.INSTANCE);
+            minecraft.gui.setScreen(MainMenuScreen.INSTANCE);
         } else {
-            minecraft.setScreen(new TitleScreen());
+            minecraft.gui.setScreen(new TitleScreen());
         }
+    }
+
+    private static Component websiteLine(String prefix) {
+        return Component.literal(prefix).append(WEBSITE_LINK);
     }
 
     private int getCardHeight() {
@@ -146,10 +176,6 @@ public class WelcomeScreen extends Screen {
 
     private int getCardY(int cardHeight) {
         return (this.height - cardHeight) / 2;
-    }
-
-    private static String decode(String value) {
-        return new String(Base64.getDecoder().decode(value), StandardCharsets.UTF_8);
     }
 
 }
